# ocaml-fastrest

./: dune-project  fastrest.opam
src/: dune  fastrest.ml  fastrest.mli
test/: dune  test.ml
