opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-warp10"
bug-reports: "https://github.com/vbmithr/ocaml-warp10/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-warp10"
doc: "https://vbmithr.github.io/ocaml-warp10/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "uri" {>= "3.1.0"}
  "logs-async" {= version}
  "httpaf" {>= "0.6.5"}
  "httpaf-async" {>= "0.6.5"}
  "async-uri" {= version}
  "ezjsonm" {>= "1.1.0"}
  "ocplib-json-typed" {>= "0.7.1"}
]
synopsis: "Somewhat typed client library to do simple REST queries."
description: """
"""
